@@ -17,7 +17,8 @@ EE_OBJS = 	gsCore.o \
 		gsTexture.o \
 		gsVU1.o
 
-EE_CFLAGS += -g
+#EE_CFLAGS += -g
+EE_CFLAGS += -O2
 
 all: $(EE_OBJS)
 	$(EE_AR) rcs $(LIBGSKIT) $(EE_OBJS)
